src/App.css
@font-face {
  font-family: 'Mark Pro';
  src: url('./fonts/markProHeavy.ttf') format('truetype');
}

* {
  box-sizing: border-box;
}

/* Scrollbar */
::-webkit-scrollbar {
  /* width: 0.4vw; */
  display: none;
}

/* ::-webkit-scrollbar-track {
  background: transparent;
} */

/* ::-webkit-scrollbar-thumb {
  background-color: rgba(99, 99, 99, 0.33);
  border-radius: 10px;
} */
/*------------------------------------------------- */


body {
  margin: 0;
  padding: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: white;
  background-color: #10101a;
}

#root {
  background-color: #10101a;
  height: 100vh;
  display: grid;
  place-items: center;
}

lottie-player {
  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
  filter: saturate(80%);
}

#hero {
  position: relative;
  display: grid;
  min-height: 100vh;
  overflow: hidden;
  background-image: url('../public/astronautResized.jpg');
  background-size: cover;
  background-repeat: no-repeat;
}

#hero::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: linear-gradient(175deg, rgba(40, 0, 40, 0.2) 0%, rgba(0, 0, 0, 0.4) 70%, rgba(10, 0, 31, 0.8) 100%);
}

#about {
  min-height: 100vh;
  overflow: hidden;
  background-color: #10101a;
}

#project {
  padding-top: 125px;
  padding-bottom: 75px;
  background-color: #0D1117;
  /* border: skyblue 1px dashed; */
}

#content {
  padding: 150px 0px;
  background-color: #0b0f14;
  display: grid;
  place-items: center;
  /* border: gray 1px dashed; */
}

#contact {
  background-color: #10101a;
}

#project-page {
  min-height: 100vh;
  min-width: 100vw;
  background-color: #0D1117;
}

/** ---------------------Header section--------------------- */
header {
  /* absolute to hero */
  position: absolute;
  width: 100%;
  background-color: transparent;
  z-index: 10;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 10px 0 0 20px;
}

.nav--icon {
  width: 44px;
  height: 44px;
  border-radius: 50%;
  transform: rotate(30deg);
}

a:hover .nav--icon {
  transform: rotate(390deg);
  transition: 1s;
}

.nav--links {
  display: flex;
  padding: 20px 80px 20px 40px;
  /* background-color: rgba(255, 255, 255, 0.075); */
  background-color: #10101a91;
  border-radius: 2.5px;
  flex-wrap: wrap;
}

.nav--links a {
  color: rgb(255, 255, 255, 0.8);
  text-decoration: none;
  font-family: 'Mark Pro', sans-serif;
}

.nav--links a:not(:last-child) {
  margin-right: 30px;
}

.nav--links a:hover {
  color: rgb(200, 255, 255);
}

.nav--hamburger {
  display: none;
  background: transparent;
  border: transparent;
  filter: invert(100%);
  padding: 0;
}

.nav--hamburger.hide {
  display: none;
}

.nav--side-links {
  display: none;
}

/** ---------------------Header section--------------------- */

.hero--container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  position: relative;
  z-index: 1;
}

.hero--container--text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 125px;
}

.hero--container--text * {
  margin: 0;
  cursor: default;
}

.hero--container--text h1 {
  font-family: 'Mark Pro', sans-serif;
  font-size: 81px;
  line-height: 100%;
  letter-spacing: -.02em;
  color: rgba(255, 255, 255, 0.9);
}

.hero--container--text h1 span {
  background: linear-gradient(-45deg,skyblue, rgb(85, 72, 121), rgb(124, 84, 124), pink);
  background-size: 400% 400%;
  color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: gradient 6s ease-in-out infinite;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.hero--container--text p {
  margin-top: 10px;
  font-size: 19px;
  letter-spacing: 0.02em;
  opacity: 65%;
}

.hero--container--arrow {
  position: absolute;
	left: 50%;
	bottom: 5vh;
	display: block;
	text-align: center;
	font-size: 20px;
	text-decoration: none;
	width: 12px;
	height: 12px;
	border-bottom: 2px solid #fff;
	border-right: 2px solid #fff;
	-webkit-transform: translate(-50%, 0%) rotate(45deg);
	-moz-transform: translate(-50%, 0%) rotate(45deg);
	transform: translate(-50%, 0%) rotate(45deg);
	-webkit-animation: fade_move_down 2s ease-in-out infinite;
	-moz-animation: fade_move_down 2s ease-in-out infinite;
	animation: fade_move_down 2s ease-in-out infinite;
}

/* for more clickable area */
.hero--container--arrow::before {
  content: "";
  position: absolute;
  top: -15px;
  bottom: -15px;
  left: -15px;
  right: -15px;
  background-color: transparent;
}

/* for hero--container--arrow animation */
@-webkit-keyframes fade_move_down {
    0% {
  -webkit-transform:translate(0, -10px) rotate(45deg);
  opacity: 0;
  }
    50% {
  opacity: 1;
  }
    100% {
  -webkit-transform:translate(0, 10px) rotate(45deg);
  opacity: 0;
  }
 }

 @-moz-keyframes fade_move_down {
    0% {
  -moz-transform:translate(0, -10px) rotate(45deg);
  opacity: 0;
  }
    50% {
  opacity: 1;
  }
    100% {
  -moz-transform:translate(0, 10px) rotate(45deg);
  opacity: 0;
  }
 }

 @keyframes fade_move_down {
    0% {
  transform:translate(0, -10px) rotate(45deg);
  opacity: 0;
  }
    50% {
  opacity: 1;
  }
    100% {
  transform:translate(0, 10px) rotate(45deg);
  opacity: 0;
  }
 }

 /**--------------------About section-------------------- */
.about--container {
  position: relative;
  height: 100vh;
  display: flex;
}

.about--container--globe {
  position: absolute;
  top: 60px;
  left: -300px;
  opacity: 20%;
  filter: saturate(150%);
  /* border: darkcyan 1px dashed; */
}

.about--container--intro {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 750px;
  /* border: gray 1px dashed; */
}

.about--container--intro--text {
  margin: 0 120px;
  padding-top: 50px;
}
/* ... */

